--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,19 @@ header {
    background: tomato;
 }
 
+section {
+   padding-top: 50px;
+}
+
+.container {
+   width: 1200px;
+   margin: 0 auto;
+}
+
+h1 {
+   margin-bottom: 20px;
+}
+
 
 /* === popup === */
 
@@ -91,9 +104,9 @@ header {
    border: none;
    cursor: pointer;
 }
-.popup__next {
+/* .popup__next {
    
-}
+} */
 .popup__back {
    margin-right: 20px;
 }
@@ -108,3 +121,86 @@ header {
 .arrow_active {
    background: yellowgreen;
 }
+
+/* === card === */
+
+.card {
+   width: 20%;
+   height: 310px;
+   padding: 20px 15px;
+   /* margin: 0 55px; */
+   /* display: flex;
+   flex-direction: column;
+   align-items: center; */
+   text-align: center;
+
+   border: 1px solid #e5e5ee;
+   border-radius: 12px;
+   transition: 0.2s ease;
+}
+
+.card:hover {
+   box-shadow: 0 0 10px 2px rgba(233, 233, 233, 0.7);
+}
+
+.card__city {
+   font-size: 48px;
+   text-transform: uppercase;
+   padding-bottom: 20px;
+   border-bottom: 1px solid lightgray;
+}
+
+.card__temperature {
+   font-size: 32px;
+   padding: 20px 0;
+   border-bottom: 1px solid lightgray;
+}
+
+.card__precipitation {
+   padding: 20px 0;
+   border-bottom: 1px solid lightgray;
+}
+
+.card__wind {
+   padding-top: 20px;
+}
+
+/* === new-card === */
+
+.new-card {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   cursor: pointer;
+}
+
+.new-card__plus {
+   width: 80px;
+   height: 80px;
+   transition: 0.2s ease-out;
+   
+
+   background: #e5e5e5;
+   border-radius: 50%;
+
+   font-size: 52px;
+   color: white;
+
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.new-card:hover .new-card__plus { 
+   transform: rotate(-90deg);
+   background: yellowgreen;
+   cursor: pointer;
+}
+
+
+
+
+
+
+
+
